# Oz_codingSchool

./: 10-profile.html  read.md
1회차/: 04-HTML기본문법.html  06-텍스트표시하기.html  08-컨테이너와 전역 속성.html  10-profile.html
2회차/: 10-링크표시하기.html  15-양식을 만들고 값 전송하기.html  설문조사양식만들기.html
3회차/: 19-css문서사용하기.html  21-박스모델이란.html  22-테두리스타일.html  25-색깔을지정하는방법.html
4회차/: 27-요소의유형.html  28-문서의흐름.html  32-의사요소-의사클래스.html  chat.css  chat.html
DATABASE/: chapter01_06.ipynb  read.md  챌린지_CREAT (초급).sql
DATABASE/2일차/: chapter07_13.ipynb  project.sql
DATABASE/4일차/: challenge(초급).sql  test_pymysql.py
DATABASE/5일차/: airbnb_dummy.py  airbnb_pymysql.py  yes24_crawl.ipynb
DATABASE/6일차/: 수업.sql
Django/: pyproject.toml  read.md
Django/chapter_01/config/: settings.py  urls.py
Django/chapter_01/templates/: index.html
Django/chapter_01/user/: models.py
Django/chapter_01/user/migrations/: 0001_initial.py
Django/config/: settings.py
FLASK/1일차/: read.md
HTML&CSS/1회차/: 05-HTML문서기본구조.html  07-요소의구분과라인텍스트요소.html  09-이미지표시하기.html  html 기본양식.html
HTML&CSS/2회차/: 11-목록만들기.html  12-표 만들기.html  13-입력태그input.html  14-input외의 입력태그들.html  16-의미론적 코드:시맨틱태그.html
HTML&CSS/3회차/: 19-css문서사용하기.html  20-선택자기본편.html  23-여백 다루기.html  (+3 more)
JAVASCRIPT/: 02-자바스크립트소개.html  02-자바스크립트소개.js  04-콘솔출력.html  05-변수와상수.html  08-undefined외.html  09-DOM소개.html
PYTHON/: Ch01.task.ipynb  Ch03_task.ipynb  Ch04_task(code).ipynb  Ch04_task.ipynb  Chapter0508_과제 (1).ipynb  Chapter0508_과제(vsc).ipynb  Chapter0508_과제.ipynb
WEP_SCRAPING/: cgv.py  find_all.py  honey.py  melon-mobile.py  naver.py
새싹반/: naming.md
(+130 files in other folders)
